Css correction alignement nav style secondaire

--- a/src/sass/__menu.scss
+++ b/src/sass/__menu.scss
@@ -37,7 +37,7 @@
 	ul{
 		display: flex;
 		flex-wrap: wrap;
-		justify-content:space-between; //Horizontal : space-between stretch flex-start
+		justify-content:space-start; //Horizontal : space-between stretch flex-start
 		align-content:flex-start; //Vertical multiligne : space-between stretch flex-start
 		align-items:stretch;//Vertical : 
 		margin:0;
